--- a/notebooks/01_jupyter_notebooks.ipynb
+++ b/notebooks/01_jupyter_notebooks.ipynb
@@ -5,7 +5,7 @@
    "id": "6f0518bb",
    "metadata": {},
    "source": [
-    "## A beginner's introduction to JupyterHub, JupyterLab and Jupyter Notebooks\n",
+    "## A beginner's introduction to JupyterHub, JupyterLab and Jupyter Notebook\n",
     "\n",
     "In this project you will get beginner's introduction to using JupyterLab and Jupyter Notebooks. For this course we created a JupyterHub virtual environment on Google Cloud where you will login to access course materials. These include inital version of Jupyter Notebooks, images, video, CSV files and other media which you will modify to create your own versions and publish them.\n",
     "\n",
