--- a/notebooks/01_jupyter_notebooks.ipynb
+++ b/notebooks/01_jupyter_notebooks.ipynb
@@ -175,11 +175,43 @@
     "    Once cells are selected, you can then delete / copy / cut / paste / run them as a batch. This is helpful when you need to move parts of a notebook.\n",
     "    You can also use Shift + M to merge multiple cells."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "57e75f4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## End of Notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64c95eb5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
